--- a/Gender_counts.ipynb
+++ b/Gender_counts.ipynb
@@ -131,7 +131,7 @@
    "source": [
     "import os\n",
     "import openai\n",
-    "openai.api_key = \"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\"\n",
+    "openai.api_key = \"OPENAI_token\"\n",
     "import ast"
    ]
   },
